# orocos_kinematics_dynamics

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  INSTALL  KDLConfig.cmake.in  LICENSE  Makefile  Makefile.ros  Plugin.cpp  Plugin.hpp  README.md  TEMP.cpp  Types.hpp  build-deb.sh  kdl-typekit.pc.in  kdl.tlb  kdl.typelist  manifest.xml  rosdep.yaml  stack.xml
deprecated/orocos_kdl/: CMakeLists.txt  package.xml
deprecated/python_orocos_kdl/: CMakeLists.txt  package.xml
kdl/: CMakeLists.txt  README.txt  constraints.cpp  debug_macros.cxx  debug_macros.h  error.h  error_stack.cxx  error_stack.h  frameacc.cpp  frameacc.hpp  frameacc_io.hpp  frames.cpp  frames.hpp  frames.inl  frames_io.cpp  frames_io.hpp  framevel.cpp  framevel.hpp  framevel.inl  framevel_io.hpp  fvector.h  fvector2.h  fvector2_io.h  fvector_io.h  jacobian.hpp  kdl-config.h  kdl.hpp  kdl.pc.in  manifest.xml  orocos-kdl-config.cmake.in  package.xml  pinv.cpp  plane.cxx  plane.h  stiffness.hpp  test_macros.cpp  test_macros.h  traits.h  usage.txt  utility.cxx  (+2 more)
kdl/config/: FindEigen3.cmake  FindSIP.cmake
kdl/kdltk/: CMakeLists.txt  jointproperties.cpp  jointproperties.hpp  kdltk.hpp.in  kdltk.pc.in  kinfamproperties.cpp  kinfamproperties.hpp  motionproperties.cpp  motionproperties.hpp  toolkit.cpp  toolkit.hpp  transproperties.cpp  transproperties.hpp
kdl/kinfam/: body.hpp  cartpos2jnt.hpp  cartvel2jnt.hpp  chain.cpp  chain.hpp  chainfksolver.hpp  chainfksolverpos_succesive.cpp  chainfksolverpos_succesive.hpp  chainiksolver.hpp  crs450.hpp  fksolver.hpp  iksolver.hpp  jnt2cartpos.hpp  jnt2cartvel.hpp  jnt2jac.hpp  joint.cpp  joint.hpp  joint_io.cpp  joint_io.hpp  kinematicfamily.hpp  kinematicfamily_io.cpp  kinematicfamily_io.hpp  kinematictree.cpp  kinematictree.hpp  kinfam.hpp  kuka160.hpp  kuka361.hpp  kuka361transmission.hpp  lineartransmission.cpp  lineartransmission.hpp  robuter.hpp  segment.cpp  segment.hpp  serialchain.cpp  serialchain.hpp  serialchain_io.cpp  serialchain_io.hpp  serialchaincartpos2jnt.cpp  serialchaincartpos2jnt.hpp  serialchaincartvel2jnt.cpp  (+26 more)
kdl/models/: kukaLWRtestDHnew.cpp  kukaLWRtestHCG.cpp
kdl/motion/: path.cxx  path.h  path_circle.cxx  path_circle.h  path_composite.cxx  path_composite.h  path_cyclic_closed.cxx  path_cyclic_closed.h  path_line.cxx  path_line.h  path_point.cxx  path_point.h  path_roundedcomposite.cxx  path_roundedcomposite.h  rotational_interpolation.cxx  rotational_interpolation.h  rotational_interpolation_sa.cxx  rotational_interpolation_sa.h  trajectory.cxx  trajectory.h  trajectory_composite.cpp  trajectory_composite.h  trajectory_segment.cxx  trajectory_segment.h  trajectory_stationary.cpp  trajectory_stationary.h  velocityprofile.cxx  velocityprofile.h  velocityprofile_dirac.cxx  velocityprofile_dirac.h  velocityprofile_rect.cxx  velocityprofile_rect.h  velocityprofile_trap.cxx  velocityprofile_trap.h  velocityprofile_traphalf.cxx  velocityprofile_traphalf.h
kdl/src/: CMakeLists.txt  articulatedbodyinertia.cpp  chaindynparam.cpp  chainidsolver_vereshchagin.hpp  chainiksolvervel_pinv_givens.hpp  chainiksolvervel_pinv_nso.cpp  chainiksolvervel_pinv_nso.hpp  chainiksolvervel_wdls.hpp  frames.cpp  frames.hpp  jntarrayacc.hpp  joint.hpp  kinfam_io.cpp  rotationalinertia.cpp  solveri.hpp  treefksolverpos_recursive.cpp
kdl/tests/: CMakeLists.txt  solvertest.cpp  solvertest.hpp
kdl_typekit/: CMakeLists.txt  Makefile  manifest.xml
kdl_typekit/src/: kdlTypekit.hpp  kdlTypekitJacobian.cpp  kdlTypekitJntArray.cpp  kdlTypekitJoint.cpp  kdlTypekitOperators.cpp  kdlTypekitSegment.cpp  kdlTypekitTwist.cpp  kdlTypekitTypes.hpp  kdlTypekitVector.cpp  kdlTypekitWrench.cpp  kinfamproperties.cpp  motionproperties.cpp  motionproperties.hpp
kdl_typekit/test/: CMakeLists.txt  typekit_test.cpp
models/: CMakeLists.txt  models.hpp  puma560.cpp  puma560test.cpp
orocos-kdl/: orocos-kdl-config.cmake.in  package.xml
orocos-kdl/src/: CMakeLists.txt  chainjnttojacsolver.hpp  framevel.hpp  jacobian.hpp  path_roundedcomposite.cpp
orocos-kdl/tests/: framestest.cpp
orocos_kdl/: CMakeLists.txt  INSTALL  INSTALL.md  KDLConfig.cmake.in  Makefile  Makefile.ros  manifest.xml  orocos-kdl-config.cmake.in  orocos_kdl-config.cmake.in  package.xml  rosdoc.yaml
orocos_kdl/cmake/: FindEigen3.cmake
orocos_kdl/config/: FindEigen3.cmake  FindSIPandPython.cmake
orocos_kdl/debian/: copyright
orocos_kdl/doc/: CMakeLists.txt  Doxyfile.in  chainhdsolver_vereshchagin_doc.md
orocos_kdl/examples/: CMakeLists.txt  chainiksolverpos_lma_demo.cpp  geometry.cpp  trajectory_example.cpp
orocos_kdl/models/: CMakeLists.txt  kukaLWRtestDHnew.cpp  kukaLWRtestHCG.cpp  puma560test.cpp
orocos_kdl/src/: CMakeLists.txt  articulatedbodyinertia.cpp  articulatedbodyinertia.hpp  chain.cpp  chain.hpp  chaindynparam.cpp  chaindynparam.hpp  chainexternalwrenchestimator.cpp  chainexternalwrenchestimator.hpp  chainfdsolver.hpp  chainfdsolver_recursive_newton_euler.cpp  chainfdsolver_recursive_newton_euler.hpp  chainfksolver.hpp  chainfksolverpos_recursive.cpp  chainfksolverpos_recursive.hpp  chainfksolvervel_recursive.cpp  chainfksolvervel_recursive.hpp  chainhdsolver_vereshchagin.cpp  chainhdsolver_vereshchagin.hpp  chainhdsolver_vereshchagin_doc.md  chainidsolver_recursive_newton_euler.cpp  chainidsolver_recursive_newton_euler.hpp  chainidsolver_vereshchagin.cpp  chainidsolver_vereshchagin.hpp  chainiksolverpos_lma.cpp  chainiksolverpos_lma.hpp  chainiksolverpos_lma_jl.cpp  chainiksolverpos_lma_jl.hpp  chainiksolverpos_nr.cpp  (+107 more)
orocos_kinematics_dynamics/: CMakeLists.txt  package.xml
pykdl/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
python-orocos-kdl/: CMakeLists.txt  package.xml
python_orocos_kdl/: CMakeLists.txt  INSTALL.md  README.md  manifest.xml  package.xml  pyproject.toml
tests/: CMakeLists.txt  framestest.cpp  framestest.hpp  framestest.py  inertiatest.cpp  inertiatest.hpp  iotest.cpp  jacobiantest.cpp  kinfamtest.cpp  kinfamtest.hpp  serialchaintest.cpp  solvertest.cpp  solvertest.hpp  test-runner.cpp  toolkittest.cpp  zxxzxztest.cpp
(+393 files in other folders)
