<package>
  <name>kdl</name>
  <version>0.3.0</version>
  <description>
    This is the Kinematics and Dynamics Library (KDL), distributed by the
    Orocos Project.
  </description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>LGPL</license>

  <url type="website">http://www.orocos.org/kdl</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>
  <author>Erwin Aertbelien</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
    <doxymaker external="http://www.orocos.org/kdl"/>
  </export>
</package>
