<package>
  <name>kdl</name>
  <version>1.2.2</version>
  <description>
    This is the Kinematics and Dynamics Library (KDL), distributed by the
    Orocos Project.
  </description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <author>Ruben Smits</author>
  <author>Erwin Aertbelien</author>
  <url type="website">http://www.orocos.org/kdl</url>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>eigen</build_depend>

  <run_depend>pkg-config</run_depend>

  <test_depend>cppunit</test_depend>
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
